// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme tokens > snapshots both themes so token drift is reviewed 1`] = `
{
  "borderWidths": {
    "none": 0,
    "thick": 2,
    "thin": 1,
  },
  "colors": {
    "accent": "#09090B",
    "accentContrast": "#FFFFFF",
    "accentMuted": "#52525B",
    "background": "#FFFFFF",
    "border": "#E4E4E7",
    "borderStrong": "#D4D4D8",
    "controlBorder": "#8A8A93",
    "danger": "#B91C1C",
    "dangerContrast": "#FFFFFF",
    "dangerFill": "#B91C1C",
    "focus": "#1D4ED8",
    "info": "#1D4ED8",
    "overlay": "rgba(9, 9, 11, 0.4)",
    "positive": "#15803D",
    "progressFill": "#09090B",
    "progressTrack": "#E4E4E7",
    "skeleton": "#E4E4E7",
    "surface": "#FFFFFF",
    "surfaceElevated": "#FAFAFA",
    "surfaceRaised": "#F4F4F5",
    "surfaceSunken": "#F4F4F5",
    "tabBar": "#FFFFFF",
    "tabBarBorder": "#E4E4E7",
    "textInverse": "#FFFFFF",
    "textMuted": "#67676F",
    "textPrimary": "#09090B",
    "textSecondary": "#52525B",
    "warning": "#8A5A12",
  },
  "elevations": {
    "high": 6,
    "low": 2,
    "none": 0,
  },
  "fontSizes": {
    "body": 15,
    "caption": 12,
    "display": 32,
    "heading": 20,
    "label": 13,
    "subheading": 16,
    "title": 24,
  },
  "fontWeights": {
    "bold": "700",
    "medium": "500",
    "regular": "400",
    "semibold": "600",
  },
  "fonts": {},
  "letterSpacing": {
    "normal": 0,
    "tight": -0.2,
    "tighter": -0.4,
    "wide": 0.2,
  },
  "lineHeights": {
    "body": 22,
    "caption": 16,
    "display": 38,
    "heading": 26,
    "label": 18,
    "title": 30,
  },
  "radii": {
    "card": 8,
    "control": 6,
    "pill": 999,
    "sheet": 12,
    "sm": 5,
    "xs": 3,
  },
  "scheme": "light",
  "spacing": {
    "lg": 16,
    "md": 12,
    "none": 0,
    "sm": 8,
    "xl": 24,
    "xs": 4,
    "xxl": 32,
    "xxs": 2,
  },
  "tones": {
    "accent": {
      "background": "#FAFAFA",
      "border": "#E4E4E7",
      "content": "#09090B",
    },
    "danger": {
      "background": "#FCF2F2",
      "border": "#F2CFCE",
      "content": "#B91C1C",
    },
    "info": {
      "background": "#F2F7FE",
      "border": "#CFE0F7",
      "content": "#1D4ED8",
    },
    "neutral": {
      "background": "#FAFAFA",
      "border": "#E4E4E7",
      "content": "#52525B",
    },
    "success": {
      "background": "#F1F8F4",
      "border": "#C8E6D4",
      "content": "#15803D",
    },
    "warning": {
      "background": "#FBF6E9",
      "border": "#EADFB8",
      "content": "#8A5A12",
    },
  },
  "touchTargets": {
    "comfortable": 56,
    "iconButton": 48,
    "large": 64,
    "minimum": 48,
    "tabBar": 60,
  },
}
`;

exports[`theme tokens > snapshots both themes so token drift is reviewed 2`] = `
{
  "borderWidths": {
    "none": 0,
    "thick": 2,
    "thin": 1,
  },
  "colors": {
    "accent": "#EDEDED",
    "accentContrast": "#0A0A0A",
    "accentMuted": "#A1A1AA",
    "background": "#000000",
    "border": "#262626",
    "borderStrong": "#3F3F46",
    "controlBorder": "#66666F",
    "danger": "#F19193",
    "dangerContrast": "#FFFFFF",
    "dangerFill": "#B3261E",
    "focus": "#7FB4F5",
    "info": "#7FB4F5",
    "overlay": "rgba(0, 0, 0, 0.7)",
    "positive": "#6FD79B",
    "progressFill": "#EDEDED",
    "progressTrack": "#262626",
    "skeleton": "#1A1A1A",
    "surface": "#0A0A0A",
    "surfaceElevated": "#111111",
    "surfaceRaised": "#1A1A1A",
    "surfaceSunken": "#000000",
    "tabBar": "#050505",
    "tabBarBorder": "#1F1F1F",
    "textInverse": "#0A0A0A",
    "textMuted": "#8A8A93",
    "textPrimary": "#EDEDED",
    "textSecondary": "#A1A1AA",
    "warning": "#E8C766",
  },
  "elevations": {
    "high": 6,
    "low": 2,
    "none": 0,
  },
  "fontSizes": {
    "body": 15,
    "caption": 12,
    "display": 32,
    "heading": 20,
    "label": 13,
    "subheading": 16,
    "title": 24,
  },
  "fontWeights": {
    "bold": "700",
    "medium": "500",
    "regular": "400",
    "semibold": "600",
  },
  "fonts": {},
  "letterSpacing": {
    "normal": 0,
    "tight": -0.2,
    "tighter": -0.4,
    "wide": 0.2,
  },
  "lineHeights": {
    "body": 22,
    "caption": 16,
    "display": 38,
    "heading": 26,
    "label": 18,
    "title": 30,
  },
  "radii": {
    "card": 8,
    "control": 6,
    "pill": 999,
    "sheet": 12,
    "sm": 5,
    "xs": 3,
  },
  "scheme": "dark",
  "spacing": {
    "lg": 16,
    "md": 12,
    "none": 0,
    "sm": 8,
    "xl": 24,
    "xs": 4,
    "xxl": 32,
    "xxs": 2,
  },
  "tones": {
    "accent": {
      "background": "#141414",
      "border": "#262626",
      "content": "#EDEDED",
    },
    "danger": {
      "background": "#1E0F10",
      "border": "#5A2225",
      "content": "#F19193",
    },
    "info": {
      "background": "#0E1622",
      "border": "#1E3A5F",
      "content": "#7FB4F5",
    },
    "neutral": {
      "background": "#141414",
      "border": "#262626",
      "content": "#A1A1AA",
    },
    "success": {
      "background": "#0E1A13",
      "border": "#1F4030",
      "content": "#6FD79B",
    },
    "warning": {
      "background": "#1E1808",
      "border": "#4A3B12",
      "content": "#E8C766",
    },
  },
  "touchTargets": {
    "comfortable": 56,
    "iconButton": 48,
    "large": 64,
    "minimum": 48,
    "tabBar": 60,
  },
}
`;
